# C-Math

./: .gitignore  CMakeLists.txt  README.md  bisection.c  bisection.h  falsePosition.c  fibonacci.c  fibonacci.h  functions.c  functions.h  newtonRaphson.c  newtonRaphson.h  tinyexpr.c
Lib/: functions.c
Optimization Algorithms/: gradientDescent.c  gradientDescent.h
Root Finders/: bisection.c  bisection.h  falsePosition.c  falsePosition.h  fixedPoint.c  fixedPoint.h  newtonRaphson.c  newtonRaphson.h  secant.c  secant.h
Series/: fibonacci.c
Source/Assets/Differentiation Algorithms/: derivNumericalAlgorithm.c  derivNumericalAlgorithm.h
Source/Assets/Function Root Finder Algorithms/: bisectionAlgorithm.c  bisectionAlgorithm.h  brentAlgorithm.c  brentAlgorithm.h  falsePositionAlgorithm.c  falsePositionAlgorithm.h  newtonRaphsonAlgorithm.c  newtonRaphsonAlgorithm.h  secantAlgorithm.c  secantAlgorithm.h
Source/Assets/Integration Algorithms/: monteCarloIntegrationAlgorithm.c  monteCarloIntegrationAlgorithm.h  riemannSumAlgorithm.c  riemannSumAlgorithm.h  rombergAlgorithm.c  rombergAlgorithm.h  simpsonRuleAlgorithm.c  simpsonRuleAlgorithm.h  trapezoidRuleAlgorithm.c  trapezoidRuleAlgorithm.h
Source/Assets/Optimization Algorithms/: goldenSectionOptAlgorithm.c  goldenSectionOptAlgorithm.h  gradientAscentAlgorithm.c  gradientAscentAlgorithm.h  gradientDescentAlgorithm.c  gradientDescentAlgorithm.h  newtonRaphsonOptAlgorithm.c  newtonRaphsonOptAlgorithm.h  simpleMaxMinFinderAlgorithm.c  simpleMaxMinFinderAlgorithm.h
Source/Assets/Series Algorithms/: fibonacci.h  fibonacciAlgorithm.c  fibonacciAlgorithm.h
Source/Assets/Util/: _configurations.h  dynamicArrayLib.c  dynamicArrayLib.h  dynamicArrays1D.c  dynamicArrays1D.h  functions.c  functions.h  parser.c  parser.h  randomGenerator.c  util.c  util.h
Source/CLI Apps/Function Root Finder Algorithms/: bisection.c  brent.c  cubic.c  falsePosition.c  newtonRaphson.c  quadratic.c  secant.c  steffensen.c
Source/CLI Apps/Integration Algoritms/: monteCarlo.c  riemannSum.c  romberg.c  simpsonRule.c  trapezoidRule.c
Source/CLI Apps/Optimization Algorithms/: goldenSectionOpt.c  gradientDescent.c  newtonRaphsonOpt.c  simpleMaxMinFinder.c
Source/Function Root Finder Algorithms/: bisection.c  brent.c  falsePosition.c  newtonRaphson.c  secant.c
Source/Integration Algoritms/: monteCarlo.c  riemannSum.c  romberg.c  simpsonRule.c  trapezoidRule.c
Source/Optimization Algorithms/: goldenSectionOpt.c  gradientAscent.c  gradientDescent.c  newtonRaphsonOpt.c  simpleMaxMinFinder.c
lib/: functions.h  parser.c
